[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-cmd"
version = "1.0.0"
description = "SSH 远程服务器管理工具 / Python SSH remote server management tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Vae-Scrooge", email = "vaescrooge@gmail.com" },
]
keywords = ["ssh", "remote", "server-management", "sysadmin", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Environment :: Console",
]
dependencies = [
    "paramiko>=3.0",
    "click>=8.0",
    "cryptography>=41.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/Vae-Scrooge/remote-cmd-test"
Repository = "https://github.com/Vae-Scrooge/remote-cmd-test"
Documentation = "https://github.com/Vae-Scrooge/remote-cmd-test#readme"
"Bug Tracker" = "https://github.com/Vae-Scrooge/remote-cmd-test/issues"
Download = "https://pypi.org/project/remote-cmd/"

[project.scripts]
remote-cmd = "remote_cmd.cli.main:main"

[tool.setuptools.packages.find]
include = ["remote_cmd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
markers = [
    "asyncio: async test",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "BLE", # blind except
    "B",   # bugbear
    "SIM", # flake8-simplify
    "ARG", # unused arguments
]
ignore = [
    "E501",
    "N812",
    "N999",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "paramiko.*",
    "click.*",
    "cryptography.*",
    "keyring.*",
    "yaml",
]
ignore_missing_imports = true
